Add bookworm dep

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1951,10 +1951,6 @@ python-hypothesis:
   gentoo: [dev-python/hypothesis]
   ubuntu:
     '*': [python-hypothesis]
-python-icecream:
-  ubuntu:
-    jammy: [python3-icecream]
-    noble: [python3-icecream]
 python-imageio:
   debian:
     buster: [python-imageio]
@@ -6497,6 +6493,12 @@ python3-hypothesis:
   fedora: [python3-hypothesis]
   gentoo: [dev-python/hypothesis]
   ubuntu: [python3-hypothesis]
+python3-icecream:
+  debian:
+    bookworm: [python3-icecream]
+  ubuntu:
+    jammy: [python3-icecream]
+    noble: [python3-icecream]
 python3-ifcfg:
   debian:
     buster: [python3-ifcfg]
@@ -8141,7 +8143,7 @@ python3-pyparsing:
   ubuntu: [python3-pyparsing]
 python3-pypdf:
   debian:
-    bookworm: [python3-pypdf]
+    orm: [python3-pypdf]
     bullseye:
       pip:
         packages: [pypdf]
