--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -8143,7 +8143,7 @@ python3-pyparsing:
   ubuntu: [python3-pyparsing]
 python3-pypdf:
   debian:
-    orm: [python3-pypdf]
+    bookworm: [python3-pypdf]
     bullseye:
       pip:
         packages: [pypdf]
