--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -8681,6 +8681,12 @@ repositories:
       url: https://github.com/snt-arg/situational_graphs_msgs.git
       version: main
     status: maintained
+  situational_graphs_reasoning_msgs:
+    source:
+      type: git
+      url: https://github.com/snt-arg/situational_graphs_reasoning_msgs.git
+      version: main
+    status: maintained
   slam_toolbox:
     doc:
       type: git
