--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -7205,6 +7205,12 @@ repositories:
       url: https://github.com/snt-arg/situational_graphs_msgs.git
       version: main
     status: maintained
+  situational_graphs_reasoning_msgs:
+    source:
+      type: git
+      url: https://github.com/snt-arg/situational_graphs_reasoning_msgs.git
+      version: main
+    status: maintained
   slam_toolbox:
     doc:
       type: git
