--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -7206,6 +7206,11 @@ repositories:
       version: develop
     status: maintained
   situational_graphs_msgs:
+    release:
+      tags:
+        release: release/iron/{package}/{version}
+      url: https://github.com/ros2-gbp/situational_graphs_msgs-release.git
+      version: 0.0.1-1
     source:
       type: git
       url: https://github.com/snt-arg/situational_graphs_msgs.git
