Added python3-customtkinter-pip key Added a key for the python3-only pip package "customtkinter".

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -5441,6 +5441,10 @@ python3-cryptography:
   opensuse: [python3-cryptography]
   rhel: ['python%{python3_pkgversion}-cryptography']
   ubuntu: [python3-cryptography]
+python3-customtkinter-pip:
+  '*':
+    pip:
+      packages: [customtkinter]
 python3-cvxopt:
   arch: [python-cvxopt]
   debian: [python3-cvxopt]
