--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -5411,6 +5411,7 @@ repositories:
       tags:
         release: release/rolling/{package}/{version}
       url: https://github.com/ros2-gbp/rmf_traffic_editor-release.git
+      version: 1.9.0-1
     source:
       type: git
       url: https://github.com/open-rmf/rmf_traffic_editor.git
