--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -3695,10 +3695,10 @@ repositories:
       url: https://github.com/ros2/libyaml_vendor.git
       version: humble
     status: maintained
-  lidar_s_graphs:
+  lidar_situational_graphs:
     source:
       type: git
-      url: https://github.com/snt-arg/lidar_s_graphs.git
+      url: https://github.com/snt-arg/lidar_situational_graphs.git
       version: feature/ros2
     status: maintained
   lms1xx:
