--- a/noetic/distribution.yaml
+++ b/noetic/distribution.yaml
@@ -2642,6 +2642,10 @@ repositories:
       version: noetic-devel
     status: maintained
   etsi_its_messages:
+    doc:
+      type: git
+      url: https://github.com/ika-rwth-aachen/etsi_its_messages.git
+      version: main
     release:
       packages:
       - etsi_its_cam_coding
@@ -2660,7 +2664,7 @@ repositories:
       tags:
         release: release/noetic/{package}/{version}
       url: https://github.com/ika-rwth-aachen/etsi_its_messages-release.git
-      version: 2.0.1-1
+      version: 2.0.2-2
     source:
       type: git
       url: https://github.com/ika-rwth-aachen/etsi_its_messages.git
