--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -738,12 +738,12 @@ repositories:
       - bond
       - bond_core
       - bondcpp
+      - bondpy
       - smclib
-      - test_bond
       tags:
         release: release/rolling/{package}/{version}
       url: https://github.com/ros2-gbp/bond_core-release.git
-      version: 4.0.0-4
+      version: 4.1.0-1
     source:
       test_pull_requests: true
       type: git
