opennav_docking: 0.0.1-1 in 'humble/distribution.yaml' [bloom]

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -5203,6 +5203,27 @@ repositories:
       url: https://github.com/ros-event-camera/openeb_vendor.git
       version: humble
     status: developed
+  opennav_docking:
+    doc:
+      type: git
+      url: https://github.com/open-navigation/opennav_docking.git
+      version: humble
+    release:
+      packages:
+      - nova_carter_docking
+      - opennav_docking
+      - opennav_docking_bt
+      - opennav_docking_core
+      - opennav_docking_msgs
+      tags:
+        release: release/humble/{package}/{version}
+      url: https://github.com/open-navigation/opennav_docking-release.git
+      version: 0.0.1-1
+    source:
+      type: git
+      url: https://github.com/open-navigation/opennav_docking.git
+      version: humble
+    status: maintained
   openni2_camera:
     doc:
       type: git
