--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -8439,7 +8439,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/nobleo/rviz_satellite.git
-      version: ros2
+      version: main
     release:
       tags:
         release: release/humble/{package}/{version}
@@ -8448,7 +8448,7 @@ repositories:
     source:
       type: git
       url: https://github.com/nobleo/rviz_satellite.git
-      version: ros2
+      version: main
     status: maintained
   rviz_visual_tools:
     doc:
