--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -626,7 +626,7 @@ repositories:
     source:
       type: git
       url: https://github.com/autowarefoundation/autoware_adapi_msgs.git
-      version: rolling
+      version: main
     status: developed
   autoware_auto_msgs:
     doc:
