--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -550,7 +550,7 @@ repositories:
     source:
       type: git
       url: https://github.com/autowarefoundation/autoware_cmake.git
-      version: rolling
+      version: main
     status: developed
   autoware_internal_msgs:
     release:
