--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -683,7 +683,7 @@ repositories:
     source:
       type: git
       url: https://github.com/autowarefoundation/autoware_utils.git
-      version: rolling
+      version: main
     status: developed
   avt_vimba_camera:
     doc:
