--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -578,7 +578,7 @@ repositories:
     source:
       type: git
       url: https://github.com/autowarefoundation/autoware_utils.git
-      version: rolling
+      version: main
     status: developed
   avt_vimba_camera:
     doc:
