--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -588,7 +588,7 @@ repositories:
     source:
       type: git
       url: https://github.com/autowarefoundation/autoware_utils.git
-      version: rolling
+      version: main
     status: developed
   avt_vimba_camera:
     doc:
