Update branches for autoware_lanelet2_extension
Signed-off-by: Esteve Fernandez <esteve@apache.org>

--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -577,7 +577,7 @@ repositories:
     source:
       type: git
       url: https://github.com/autowarefoundation/autoware_lanelet2_extension.git
-      version: rolling
+      version: main
     status: developed
   autoware_utils:
     release:
