--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -567,7 +567,7 @@ repositories:
     source:
       type: git
       url: https://github.com/autowarefoundation/autoware_lanelet2_extension.git
-      version: rolling
+      version: main
     status: developed
   autoware_utils:
     release:
