Update branches for autoware_internal_msgs
Signed-off-by: Esteve Fernandez <esteve@apache.org>

--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -571,7 +571,7 @@ repositories:
     source:
       type: git
       url: https://github.com/autowarefoundation/autoware_internal_msgs.git
-      version: rolling
+      version: main
     status: developed
   autoware_lanelet2_extension:
     source:
