Add in rosdep key for python3-semver on RHEL.
This is now required by image_pipeline.

Signed-off-by: Chris Lalancette <clalancette@gmail.com>

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -8900,6 +8900,7 @@ python3-semver:
   debian: [python3-semver]
   fedora: [python3-semver]
   freebsd: [py36-semver]
+  rhel: [python3-semver]
   ubuntu: [python3-semver]
 python3-sense-emu-pip:
   debian:
