--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -3723,10 +3723,11 @@ repositories:
     release:
       packages:
       - bosch_locator_bridge
+      - bosch_locator_bridge_utils
       tags:
         release: release/humble/{package}/{version}
       url: https://github.com/ros2-gbp/locator_ros_bridge-release.git
-      version: 2.1.5-1
+      version: 2.1.11-1
     source:
       type: git
       url: https://github.com/boschglobal/locator_ros_bridge.git
