--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -3456,6 +3456,27 @@ libflann-dev:
   openembedded: [libflann@meta-ros-common]
   rhel: [flann-devel]
   ubuntu: [libflann-dev]
+libflatbuffers:
+  alpine: [flatbuffers]
+  arch: [flatbuffers]
+  debian: [libflatbuffers-dev]
+  fedora: [flatbuffers]
+  freebsd: [flatbuffers]
+  gentoo: [dev-libs/flatbuffers]
+  nixos: [flatbuffers]
+  opensuse:
+    '*': [flatbuffers]
+    '15.2': null
+    '15.3': null
+  osx:
+    homebrew:
+      packages: [flatbuffers]
+    macports:
+      packages: [flatbuffers]
+  rhel:
+    '*': [flatbuffers]
+    '8': null
+  ubuntu: [libflatbuffers-dev]
 libfltk-dev:
   arch: [fltk]
   debian:
