--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -9313,6 +9313,10 @@ python3-suas-interop-clients-pip:
   ubuntu:
     pip:
       packages: [suas-interop-clients]
+python3-supervision-pip:
+  '*':
+    pip:
+      packages: [supervision]
 python3-svg.path:
   alpine: [py3-svgpath]
   debian: [python3-svg.path]
