Add in rosdep key for fastjsonschema.
We may end up using it in the ROS 2 core.

Signed-off-by: Chris Lalancette <clalancette@gmail.com>

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -5795,6 +5795,15 @@ python3-fasteners-pip:
   ubuntu:
     pip:
       packages: [fasteners]
+python3-fastjsonschema:
+  debian: [python3-fastjsonschema]
+  fedora: [python3-fastjsonschema]
+  rhel:
+    '*': [python3-fastjsonschema]
+    '8': null
+  ubuntu:
+    '*': [python3-fastjsonschema]
+    focal: null
 python3-fastkml:
   debian: [python3-fastkml]
   ubuntu: [python3-fastkml]
