add ros2_babel_fish to rosdistro

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -5727,6 +5727,16 @@ repositories:
       version: master
     status_description: Maintained in source form only since no ROS 1 packages available
       in Rolling
+  ros2_babel_fish:
+    doc:
+      type: git
+      url: https://github.com/LOEWE-emergenCITY/ros2_babel_fish.git
+      version: jazzy
+    source:
+      type: git
+      url: https://github.com/LOEWE-emergenCITY/ros2_babel_fish.git
+      version: jazzy
+    status: maintained
   ros2_canopen:
     doc:
       type: git
