pal_gripper: 3.2.0-1 in 'humble/distribution.yaml' [bloom]

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -5494,10 +5494,11 @@ repositories:
       - pal_gripper
       - pal_gripper_controller_configuration
       - pal_gripper_description
+      - pal_gripper_simulation
       tags:
         release: release/humble/{package}/{version}
       url: https://github.com/pal-gbp/pal_gripper-release.git
-      version: 3.1.0-1
+      version: 3.2.0-1
     source:
       type: git
       url: https://github.com/pal-robotics/pal_gripper.git
