--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -7848,6 +7848,7 @@ repositories:
       url: https://github.com/ros2-gbp/tracetools_analysis-release.git
       version: 3.0.0-5
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/ros-tracing/tracetools_analysis.git
       version: iron
