--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -8014,6 +8014,11 @@ repositories:
       type: git
       url: https://github.com/facontidavide/rosx_introspection.git
       version: master
+    release:
+      tags:
+        release: release/humble/{package}/{version}
+      url: https://github.com/ros2-gbp/rosx_introspection-release.git
+      version: 1.0.0-1
     source:
       type: git
       url: https://github.com/facontidavide/rosx_introspection.git
