--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -8882,6 +8882,11 @@ repositories:
       version: main
     status: maintained
   situational_graphs_reasoning:
+    release:
+      tags:
+        release: release/humble/{package}/{version}
+      url: https://github.com/ros2-gbp/situational_graphs_reasoning-release.git
+      version: 0.0.1-1
     source:
       type: git
       url: https://github.com/snt-arg/situational_graphs_reasoning.git
