--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -8888,6 +8888,11 @@ repositories:
       version: develop
     status: maintained
   situational_graphs_reasoning_msgs:
+    release:
+      tags:
+        release: release/humble/{package}/{version}
+      url: https://github.com/ros2-gbp/situational_graphs_reasoning_msgs-release.git
+      version: 0.0.0-1
     source:
       type: git
       url: https://github.com/snt-arg/situational_graphs_reasoning_msgs.git
