--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -8909,6 +8909,11 @@ repositories:
       version: main
     status: maintained
   situational_graphs_wrapper:
+    release:
+      tags:
+        release: release/humble/{package}/{version}
+      url: https://github.com/ros2-gbp/situational_graphs_wrapper-release.git
+      version: 0.0.0-1
     source:
       type: git
       url: https://github.com/snt-arg/situational_graphs_wrapper.git
