--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -8870,6 +8870,11 @@ repositories:
       version: humble
     status: developed
   situational_graphs_datasets:
+    release:
+      tags:
+        release: release/humble/{package}/{version}
+      url: https://github.com/ros2-gbp/situational_graphs_dataset-release.git
+      version: 0.0.0-1
     source:
       type: git
       url: https://github.com/snt-arg/situational_graphs_datasets.git
