--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -2195,6 +2195,11 @@ repositories:
       type: git
       url: https://github.com/ros-misc-utilities/flex_sync.git
       version: humble
+    release:
+      tags:
+        release: release/humble/{package}/{version}
+      url: https://github.com/ros2-gbp/flex_sync-release.git
+      version: 1.1.0-1
     source:
       type: git
       url: https://github.com/ros-misc-utilities/flex_sync.git
