flex_sync: 1.3.0-1 in 'jazzy/distribution.yaml' [bloom]

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -1702,6 +1702,11 @@ repositories:
       type: git
       url: https://github.com/ros-misc-utilities/flex_sync.git
       version: jazzy
+    release:
+      tags:
+        release: release/jazzy/{package}/{version}
+      url: https://github.com/ros2-gbp/flex_sync-release.git
+      version: 1.3.0-1
     source:
       type: git
       url: https://github.com/ros-misc-utilities/flex_sync.git
