--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -1086,7 +1086,7 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://github.com/ros/diagnostics.git
-      version: ros2-jazzy
+      version: ros2-iron
     status: maintained
   dolly:
     doc:
