--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -1634,7 +1634,7 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://github.com/ros/diagnostics.git
-      version: ros2
+      version: ros2-humble
     status: maintained
   dolly:
     doc:
