--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -1179,7 +1179,7 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://github.com/ros/diagnostics.git
-      version: ros2
+      version: ros2-jazzy
     status: maintained
   dolly:
     doc:
