--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -1629,12 +1629,12 @@ repositories:
       tags:
         release: release/humble/{package}/{version}
       url: https://github.com/ros2-gbp/diagnostics-release.git
-      version: 3.1.2-1
+      version: 4.0.0-1
     source:
       test_pull_requests: true
       type: git
       url: https://github.com/ros/diagnostics.git
-      version: ros2
+      version: ros2-humble
     status: maintained
   dolly:
     doc:
