create3_examples: 0.0.5-1 in 'humble/distribution.yaml' [bloom]

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -1368,6 +1368,18 @@ repositories:
       version: humble-devel
     status: maintained
   create3_examples:
+    release:
+      packages:
+      - create3_coverage
+      - create3_examples_msgs
+      - create3_examples_py
+      - create3_lidar_slam
+      - create3_republisher
+      - create3_teleop
+      tags:
+        release: release/humble/{package}/{version}
+      url: https://github.com/ros2-gbp/create3_examples-release.git
+      version: 0.0.5-1
     source:
       type: git
       url: https://github.com/iRobotEducation/create3_examples.git
