--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -5727,7 +5727,7 @@ repositories:
       version: master
     status_description: Maintained in source form only since no ROS 1 packages available
       in Rolling
-  ros2_babel_fish:
+  ros_babel_fish:
     doc:
       type: git
       url: https://github.com/LOEWE-emergenCITY/ros2_babel_fish.git
