Added test msgs in case they land in dependencies.

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -6012,6 +6012,16 @@ repositories:
       url: https://github.com/LOEWE-emergenCITY/ros2_babel_fish.git
       version: jazzy
     status: maintained
+  ros_babel_fish_test_msgs:
+    doc:
+      type: git
+      url: https://github.com/LOEWE-emergenCITY/ros2_babel_fish.git
+      version: jazzy
+    source:
+      type: git
+      url: https://github.com/LOEWE-emergenCITY/ros2_babel_fish.git
+      version: jazzy
+    status: maintained
   ros_canopen:
     release:
       packages:
