Add python3-opencv-pip to obtain the newest version possible

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -7454,6 +7454,10 @@ python3-opencv:
     '7': null
     '8': null
   ubuntu: [python3-opencv]
+python3-opencv-pip:
+  '*':
+    pip:
+      packages: [opencv-python]
 python3-opengl:
   debian: [python3-opengl]
   fedora: [python3-pyopengl]
