--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -1978,7 +1978,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros/geometry_tutorials.git
-      version: ros2
+      version: iron
     release:
       packages:
       - geometry_tutorials
@@ -1991,7 +1991,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros/geometry_tutorials.git
-      version: ros2
+      version: iron
     status: developed
   google_benchmark_vendor:
     doc:
