--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -1995,7 +1995,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros/geometry_tutorials.git
-      version: ros2
+      version: jazzy
     release:
       packages:
       - geometry_tutorials
@@ -2008,7 +2008,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros/geometry_tutorials.git
-      version: ros2
+      version: jazzy
     status: developed
   google_benchmark_vendor:
     doc:
