--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -7246,6 +7246,15 @@ repositories:
       version: devel
     status: maintained
   situational_graphs_datasets:
+    doc:
+      type: git
+      url: https://github.com/snt-arg/situational_graphs_datasets.git
+      version: develop
+    release:
+      tags:
+        release: release/iron/{package}/{version}
+      url: https://github.com/ros2-gbp/situational_graphs_dataset-release.git
+      version: 0.0.0-1
     source:
       type: git
       url: https://github.com/snt-arg/situational_graphs_datasets.git
