--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -1081,12 +1081,12 @@ repositories:
       tags:
         release: release/iron/{package}/{version}
       url: https://github.com/ros2-gbp/diagnostics-release.git
-      version: 3.1.2-3
+      version: 4.1.0-1
     source:
       test_pull_requests: true
       type: git
       url: https://github.com/ros/diagnostics.git
-      version: ros2
+      version: ros2-iron
     status: maintained
   dolly:
     doc:
