Update rolling branch too
Signed-off-by: Alejandro Hernández Cordero <ahcorde@gmail.com>

--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -1943,7 +1943,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros/geometry_tutorials.git
-      version: ros2
+      version: rolling
     release:
       packages:
       - geometry_tutorials
@@ -1956,7 +1956,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros/geometry_tutorials.git
-      version: ros2
+      version: rolling
     status: developed
   google_benchmark_vendor:
     doc:
