use release instead of distro specific branches for flex_sync

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -1701,11 +1701,11 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-misc-utilities/flex_sync.git
-      version: jazzy
+      version: release
     source:
       type: git
       url: https://github.com/ros-misc-utilities/flex_sync.git
-      version: jazzy
+      version: release
     status: developed
   flexbe_behavior_engine:
     doc:
