--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -2206,7 +2206,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-misc-utilities/flex_sync.git
-      version: humble
+      version: release
     release:
       tags:
         release: release/humble/{package}/{version}
@@ -2215,7 +2215,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros-misc-utilities/flex_sync.git
-      version: humble
+      version: release
     status: developed
   flexbe_app:
     doc:
