--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -1624,7 +1624,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-misc-utilities/flex_sync.git
-      version: iron
+      version: release
     release:
       tags:
         release: release/iron/{package}/{version}
@@ -1633,7 +1633,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros-misc-utilities/flex_sync.git
-      version: iron
+      version: release
     status: developed
   flexbe_behavior_engine:
     doc:
