--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -1649,7 +1649,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-misc-utilities/flex_sync.git
-      version: rolling
+      version: release
     release:
       tags:
         release: release/rolling/{package}/{version}
@@ -1658,7 +1658,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros-misc-utilities/flex_sync.git
-      version: rolling
+      version: release
     status: developed
   flexbe_behavior_engine:
     doc:
